# simple-ocr-webapp

./: .gitignore  README.md  employees.db  pyproject.toml
em_app/: crud.py  database.py  main.py  models.py  schemas.py  service2.py
stupidly_simple_ocr_app_for_practice/: pyproject.toml
stupidly_simple_ocr_app_for_practice/ocr_app/: main.py  ocr_utils.py
